--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "tailwindcss": "^3.4.13"
-  }
+  },
+  "description": ""
 }
